added many components, some service, refactored code

--- a/crmapp/frontend/src/app/app.component.html
+++ b/crmapp/frontend/src/app/app.component.html
@@ -1,8 +1,14 @@
 <app-navbar></app-navbar>
 
 
-
-
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md">
+            
+            <flash-messages></flash-messages>
+            <router-outlet></router-outlet> 
+    
+    </div>  
+</div>
 
 <app-navbar-bottom></app-navbar-bottom>
