--- a/crmapp/frontend/src/app/components/clients/clients.component.html
+++ b/crmapp/frontend/src/app/components/clients/clients.component.html
@@ -1,3 +1,55 @@
-<p>
-  clients works!
-</p>
+<div class="card">
+    <h4 class="card-header text-center">
+        <i class="fa fa-users"></i> Клиенты
+        
+   </h4>
+    
+    <div class="card-body">
+
+        <div class="row">
+            <div class="col-md-10">
+                <table *ngIf="clients?.length > 0; else noClients" 
+                    class="table table-sm">
+                
+                <thead class="thead-default">
+                <tr>
+                    
+                    <th class="text-center">Название</th>
+                    <th class="text-center">ЕДРПОУ</th>
+                    <th class="text-center"></th>
+                </tr>
+                </thead>
+            
+                <tr *ngFor="let client of clients">
+                    
+                    <td class="text-center">
+                        {{client.title}}
+                    </td>
+                    <td class="text-center">
+                        {{client.edrpou}}
+                    </td>
+                    <td class="text-center">
+                        <a [routerLink]="['/client', client.id]" href="" class="btn btn-info btn-sm">
+                            <i class="fa fa-arrow-circle-o-right"></i> Подробнее
+                        </a>
+                    </td>
+                </tr>
+                    
+            </table>
+            
+            <ng-template #noClients>
+                <hr>
+                <h5 class="text-center">Нет ни одного клиента в системе...</h5>
+            </ng-template>
+
+            </div>
+            <div class="col-md-2">
+                <app-sidebar-client></app-sidebar-client>
+            </div>
+
+        </div>
+
+</div>
+</div>
+
+
