--- a/crmapp/frontend/src/app/components/navbar-bottom/navbar-bottom.component.html
+++ b/crmapp/frontend/src/app/components/navbar-bottom/navbar-bottom.component.html
@@ -1,3 +1,5 @@
+<p class="p4">
+  
 <div class="container">
   <nav class="navbar fixed-bottom navbar-light" style="background-color: #E6E6FA;">
       <div class="mx-auto">
@@ -7,7 +9,3 @@
       </div>
   </nav>
 </div>
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
