--- a/crmapp/frontend/src/styles.css
+++ b/crmapp/frontend/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+.p4 {
+	margin-bottom: 4em;
+}
+
+.p-invert {
+	text-align: center;
+	filter: invert(20%);
+}
+
+.alert p{
+	margin: 0;
+	padding: 0;
+}
