--- a/crmapp/frontend/src/app/components/navbar/navbar.component.html
+++ b/crmapp/frontend/src/app/components/navbar/navbar.component.html
@@ -15,8 +15,8 @@
             <i class="fa fa-list"></i> Справочники
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">[Empty]</a>
-            <a class="dropdown-item" href="#">[Empty]</a>
+            <a class="dropdown-item" [routerLink]="['/vacations']" href="#">Отпуски</a>
+            <a class="dropdown-item" href="#">[Empty]</a> 
             <a class="dropdown-item" href="#">[Empty]</a>
             <a class="dropdown-item" href="#">[Empty]</a>
           </div>
