--- a/crmapp/frontend/src/app/components/clients/clients.component.html
+++ b/crmapp/frontend/src/app/components/clients/clients.component.html
@@ -1,8 +1,9 @@
 <div class="card">
-    <h4 class="card-header text-center">
-        <i class="fa fa-users"></i> Клиенты
-        
-   </h4>
+    <h5 class="card-header text-center">
+        <strong>
+            <i class="fa fa-users"></i> Клиенты
+        </strong>
+   </h5>
     
     <div class="card-body">
 
@@ -28,7 +29,7 @@
                     <td class="text-center">
                         {{client.edrpou}}
                     </td>
-                    <td class="text-center">
+                    <td class="text-right">
                         <a [routerLink]="['/client', client.id]" href="" class="btn btn-info btn-sm">
                             <i class="fa fa-arrow-circle-o-right"></i> Подробнее
                         </a>
@@ -44,7 +45,7 @@
 
             </div>
             <div class="col-md-2">
-                <app-sidebar-client></app-sidebar-client>
+                <app-sidebar [url] = "['/add-client']" [title] = "['Добавить']"></app-sidebar>
             </div>
 
         </div>
