--- a/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
@@ -1,37 +1,33 @@
+<p>
+
 <div class="row">
   <div class="col-md-10">
-    <table *ngIf="addresses?.length > 0; else noAddresses"
-      class="table table-sm">
+    <table class="table table-sm"
+      *ngIf="agreements?.length > 0; else noAgreements">
 
       <thead class="thead-default">
         <tr>
           <th class="text-center">ID</th>
-          <th class="text-center">Адрес</th>
-          <th class="text-center">Действует с</th>
+          <th class="text-center">Номер</th>
+          <th class="text-center">Актуален с</th>
           <th class="text-center"></th>
         </tr>
       </thead>
       
-      <tr *ngFor="let address of addresses">
-        
-        <td class="text-center" >{{address.id}}</td>
-        <td class="text-center" >{{address.presentation}}</td>
-        <td class="text-center" >{{address.dateStart | date: 'dd.MM.y'}}</td>
+      <tr *ngFor="let agreement of agreements">
+        <td class="text-center">{{agreement.id}}</td>
+        <td class="text-center">{{agreement.number}}</td>
+        <td class="text-center">{{agreement.dateStart | date: 'dd.MM.y'}}</td>
         <td>
           <div class="d-flex justify-content-end">
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
               <div class="btn-group mr-2" role="group" aria-label="First group">
-              <!-- Button trigger modal -->
-                <button type="button" class="btn btn-success btn-sm" >
+                <a class="btn btn-success btn-sm" [routerLink]="['/agreements', agreement?.id, 'edit']">
                   <i class="fa fa-edit"></i> Изменить
-                </button>
+                </a>
               </div>
-              
               <div class="btn-group mr-2" role="group" aria-label="Second group">
-                <form action="companyAddress" method="post">
-                  <input type="hidden" name="delete"> 
-                  <input type="hidden" name="id" value="">
-                  
+                <form action="#" method="post">
                   <button type="submit" class="btn btn-danger btn-sm">
                     <i class="fa fa-trash-o"></i> Удалить
                   </button>
@@ -43,15 +39,16 @@
       </tr>
     </table>
 
-    <ng-template #noAddresses>
-      <hr>
-      <h5 class="text-center">Нет ни одного адреса в системе...</h5>
+    <ng-template #noAgreements>
+        <hr>
+        <h5 class="text-center">Нет ни одного договора в системе ...</h5>
     </ng-template>
-    
+
+
   </div>
   <div class="col-md-2">
     <button type="button" class="btn btn-primary btn-block">
-      <i class="fa fa-plus"></i> Новый адрес
+      <i class="fa fa-plus"></i> Новый договор
     </button>
   </div>
 </div>
