--- a/crmapp/frontend/src/app/components/employee/employee-details/employee-details-tabs/employee-details-tabs.component.html
+++ b/crmapp/frontend/src/app/components/employee/employee-details/employee-details-tabs/employee-details-tabs.component.html
@@ -1,25 +1,24 @@
-<ul class="nav nav-tabs nav-fill">
-    
+<ul class="nav nav-tabs nav-fill" >
     <li class="nav-item">
         <a class="nav-link"
-            routerLinkActive="active" 
-            [routerLink]="['/employees', employee?.id, 'main']">
+            routerLinkActive="active"
+            routerLink="main">
             <i class="fa fa-address-card-o">
                 </i> <strong>Основные данные</strong>
         </a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" >
         <a class="nav-link"
-            routerLinkActive="active" 
-            [routerLink]="['/employees', employee?.id, 'address']">
+            routerLinkActive="active"
+            routerLink="addresses">
             <i class="fa fa-building-o">
-                </i> <strong>Адрес</strong>
+                </i> <strong>Адресы</strong>
         </a>
     </li>
     <li class="nav-item">
         <a class="nav-link"
             routerLinkActive="active"
-            [routerLink]="['/employees', employee?.id, 'account']">
+            routerLink="accounts">
             <i class="fa fa-bank">
                 </i> <strong>Банковские реквизиты</strong>
         </a>
@@ -27,7 +26,7 @@
     <li class="nav-item">
         <a class="nav-link" 
             routerLinkActive="active"
-            [routerLink]="['/employees', employee?.id, '/vacation-sick']">
+            routerLink="vacations-sicks">
             <i class="fa fa-user-o">
                 </i> <strong>Отпуск / Больничные листы</strong>
         </a>
@@ -35,10 +34,9 @@
     <li class="nav-item">
         <a class="nav-link"
             routerLinkActive="active"
-            [routerLink]="['/employees', employee?.id, '/document']">
+            routerLink="documents">
             <i class="fa fa-file-text-o">
-                </i> <strong>Документооборот</strong>
+                </i> <strong>Договоры</strong>
         </a>
     </li>
-
 </ul>
