--- a/crmapp/frontend/src/app/components/navbar/navbar.component.html
+++ b/crmapp/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,13 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: rgb(77, 93, 105);">
   <a class="navbar-brand" routerLink="/">CRMApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button 
+      class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#navbarNav" 
+      aria-controls="navbarNav" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -11,14 +18,16 @@
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" 
+            href="" 
+            id="navbarDropdownMenuLink" 
+            data-toggle="dropdown" 
+            aria-haspopup="true" 
+            aria-expanded="false">
             <i class="fa fa-list"></i> Справочники
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="['/vacations']">Отпуски</a>
-            <a class="dropdown-item" href="#">[Empty]</a> 
-            <a class="dropdown-item" href="#">[Empty]</a>
-            <a class="dropdown-item" href="#">[Empty]</a>
           </div>
         </li>
         <li class="nav-item active">
@@ -28,7 +37,7 @@
         </li>
         <li class="nav-item active">
           <a class="nav-link" routerLink="/employees">
-            Сотрудники
+            <i class="fa fa-users"></i> Сотрудники
           </a>
         </li>
         <li class="nav-item active">
