--- a/crmapp/frontend/src/app/components/employee/employees/employees.component.html
+++ b/crmapp/frontend/src/app/components/employee/employees/employees.component.html
@@ -5,23 +5,21 @@
         </strong>
     </h5>
     <div class="card-body">
-
         <div class="row">
             <div class="col-md-10">
-                <table *ngIf="employees?.length > 0; else noEmployees" 
-                    class="table table-sm">
+
+                <table class="table table-sm"
+                    *ngIf="employees?.length > 0; else noEmployees">
                 
                     <thead class="thead-default">
                         <tr>
-                        
-                        <th class="text-center">ФИО</th>
-                        <th class="text-center">ИНН</th>
-                        <th class="text-center"></th>
+                            <th class="text-center">ФИО</th>
+                            <th class="text-center">ИНН</th>
+                            <th class="text-center"></th>
                         </tr>
                     </thead>
                 
                     <tr *ngFor="let employee of employees">
-                        
                         <td class="text-center">
                             {{employee?.surname}} {{employee?.firstname}} {{employee?.lastname}}
                         </td>
@@ -29,10 +27,29 @@
                             {{employee?.inn}}
                         </td>
                         <td class="text-right">
-                            <a class="btn btn-info btn-sm"
-                            [routerLink]="['/employees', employee?.id]">
-                                <i class="fa fa-arrow-circle-o-right"></i> Подробнее
-                            </a>
+                            <div class="btn-group">
+                                <a class="btn btn-info btn-sm"
+                                    [routerLink]="['/employees', employee?.id]">
+                                    <i class="fa fa-arrow-circle-o-right"></i> Подробнее
+                                </a>
+                                <button type="button" class="btn btn-info btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <span class="sr-only"></span>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" 
+                                        [routerLink]="['/employees', employee?.id, 'addresses']">Адресы
+                                    </a>
+                                    <a class="dropdown-item" 
+                                        [routerLink]="['/employees', employee?.id, 'accounts']">Банковские реквизиты
+                                    </a>
+                                    <a class="dropdown-item" 
+                                        [routerLink]="['/employees', employee?.id, 'vacations-sicks']">Отпуски / Больничные листы
+                                    </a>
+                                    <a class="dropdown-item" 
+                                        [routerLink]="['/employees', employee?.id, 'agreements']">Договоры
+                                    </a>
+                                </div>
+                            </div>
                         </td>
                     </tr>
                         
@@ -47,7 +64,7 @@
 
             </div>
             <div class="col-md-2">
-                <app-sidebar [url] = "['/add-employee']" [title] = "['Добавить']"></app-sidebar>
+                <app-sidebar [url] = "['/employees/add']" [title] = "['Добавить']"></app-sidebar>
             </div>
         </div>
     </div>
