--- a/crmapp/frontend/src/app/components/client/client-details/client-details-tabs/client-details-tabs.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-tabs/client-details-tabs.component.html
@@ -31,7 +31,7 @@
       routerLinkActive="active"
       routerLink="directors">
       <i class="fa fa-user-o">
-        </i> <strong>Руководитель</strong>
+        </i> <strong>Руководители</strong>
     </a>
   </li>
   <li class="nav-item"  >
