--- a/crmapp/frontend/src/app/components/client/edit-client/edit-client.component.html
+++ b/crmapp/frontend/src/app/components/client/edit-client/edit-client.component.html
@@ -38,7 +38,7 @@
   <li class="nav-item">
     <a class="nav-link disabled">
       <i class="fa fa-user-o">
-        </i> <strong>Руководитель</strong>
+        </i> <strong>Руководители</strong>
     </a>
   </li>
   <li class="nav-item">
