--- a/crmapp/frontend/src/app/components/employee/employee-details/employee-details.component.html
+++ b/crmapp/frontend/src/app/components/employee/employee-details/employee-details.component.html
@@ -14,7 +14,7 @@
 </nav>
 
 <div>
-	<app-employee-details-tabs [employee] = "employee"></app-employee-details-tabs>
+	<app-employee-details-tabs></app-employee-details-tabs>
 	<router-outlet></router-outlet>
 </div>
 		
