--- a/crmapp/frontend/src/app/components/client/add-client/add-client.component.html
+++ b/crmapp/frontend/src/app/components/client/add-client/add-client.component.html
@@ -1,76 +1,203 @@
-<div class="row">
-  <div class="col-md-6">
-    <a routerLink="/clients" href="#" class="btn btn-link">
-      <i class="fa fa-arrow-circle-o-left"></i> Вернуться к клиентам</a> 
+<nav class="breadcrumb">
+  <div class="row">
+    <div class="col">
+      <h5>
+        <strong>
+          <a class="breadcrumb-item" routerLink="/clients">
+            <i class="fa fa-users">
+              </i> Клиенты
+          </a>
+          <span class="breadcrumb-item active">Новый клиент</span>
+        </strong>
+      </h5>
+    </div>
   </div>
-  <div class="col-md-6">
+</nav>
 
-  </div>
-</div>
+<p>
 
-<div class="card">
-  <h5 class="card-header">Новый клиент</h5>
+<ul class="nav nav-tabs nav-fill">
+  <li class="nav-item">
+    <a class="nav-link active">
+      <i class="fa fa-address-card-o">
+        </i> <strong>Основные данные</strong>
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled">
+      <i class="fa fa-building-o">
+        </i> <strong>Адресы</strong>
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled">
+      <i class="fa fa-bank">
+        </i> <strong>Банковские реквизиты</strong>
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled">
+      <i class="fa fa-user-o">
+        </i> <strong>Руководители</strong>
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled">
+      <i class="fa fa-file-text-o">
+        </i> <strong>Документооборот</strong>
+    </a>
+  </li>
+</ul>
 
-  <form (ngSubmit)="onSubmit()">
+<p>
 
-    <div class="card-body">
+<form (ngSubmit)="onSubmit()">
 
-        <div class="row">
-          <div class="col-md-6">
-            <label for="title"><strong>Полное название</strong></label> 
-            <input [(ngModel)]="client.title" name="title"
-              type="text" class="form-control"
-              #clientTitle="ngModel" minlength="2" required>
-            <div *ngIf="clientTitle.errors?.required && clientTitle.touched" class="alert alert-danger">
-              Введите полное название!
-            </div>
-            <div *ngIf="clientTitle.errors?.minlength && clientTitle.touched" class="alert alert-danger">
-              Полное название должно быть не менее 2 символов!
+  <div class="row">
+
+    <div class="col-md-10">
+
+      <div class="card">
+        <div class="card-body"> 
+
+          <div class="form-group row">
+            <label 
+              for="title"
+              class="col-md-3 col-form-label">
+              <strong>Полное название</strong>
+            </label> 
+            <div class="col-md">
+              <input 
+                [(ngModel)]="client.title"
+                type="text"
+                name="title"
+                class="form-control"
+                #clientTitle="ngModel"
+                minlength="2"
+                required>
+              <div 
+                *ngIf="clientTitle.errors?.required && clientTitle.touched" 
+                class="alert alert-danger">
+                Введите полное название!
+              </div>
+              <div 
+                *ngIf="clientTitle.errors?.minlength && clientTitle.touched" 
+                class="alert alert-danger">
+                Полное название должно быть не менее 2 символов!
+              </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <label for="alias"><strong>Псевдоним</strong></label>
-            <input type="text" class="form-control"
-              [(ngModel)]="client.alias" name="alias"
-              #clientAlias="ngModel" minlength="2" required>
-            <div *ngIf="clientAlias.errors?.required && clientAlias.touched" class="alert alert-danger">
-              Введите псевдоним!
-            </div>
-            <div *ngIf="clientAlias.errors?.minlength && clientAlias.touched" class="alert alert-danger">
-              Псевдоним должен содержать не менее 2 символов!
+
+          <div class="form-group row">
+            <label 
+              for="alias"
+              class="col-md-3 col-form-label">
+              <strong>Псевдоним</strong>
+            </label>
+            <div class="col-md">
+              <input 
+                [(ngModel)]="client.alias" 
+                type="text" 
+                name="alias"
+                class="form-control"
+                #clientAlias="ngModel" 
+                minlength="2" 
+                required>
+              <div 
+                *ngIf="clientAlias.errors?.required && clientAlias.touched" 
+                class="alert alert-danger">
+                Введите псевдоним!
+              </div>
+              <div 
+                *ngIf="clientAlias.errors?.minlength && clientAlias.touched" 
+                class="alert alert-danger">
+                Псевдоним должен содержать не менее 2 символов!
+              </div>
             </div>
           </div>
-        </div>
-        <p>
-        <div class="row">
-          <div class="col-md-4">
-            <label for="edrpou"><strong>ЕДРПОУ</strong></label>
-            <input type="text" class="form-control" 
-              [(ngModel)]="client.edrpou" name="edrpou" 
-              #clientEdrpou="ngModel" minlength="7" required>
-              <div *ngIf="clientEdrpou.errors?.required && clientEdrpou.touched" class="alert alert-danger">
+        
+          <div class="form-group row">
+            <label 
+              for="edrpou"
+              class="col-md-3 col-form-label">
+              <strong>ЕДРПОУ</strong>
+            </label>
+            <div class="col-md">
+              <input 
+                type="text" 
+                class="form-control" 
+                [(ngModel)]="client.edrpou" 
+                name="edrpou" 
+                #clientEdrpou="ngModel" 
+                minlength="7" 
+                required>
+              <div 
+                *ngIf="clientEdrpou.errors?.required && clientEdrpou.touched" 
+                class="alert alert-danger">
                 Введите ЕДРПОУ!
               </div>
-              <div *ngIf="clientEdrpou.errors?.minlength && clientEdrpou.touched" class="alert alert-danger">
+              <div 
+                *ngIf="clientEdrpou.errors?.minlength && clientEdrpou.touched" 
+                class="alert alert-danger">
                 ЕДРПОУ должно содержать не менее 7 символов!
               </div>
+            </div>
           </div>
-          <div class="form-group col-md-4">
-            <label for="inn"><strong>ИНН</strong></label>
-            <input type="text" class="form-control" 
-            [(ngModel)]="client.inn" name="inn">
-          </div>
-          <div class="col-md-4">
-            <label for="vatCertificate"><strong>№ свидетельства НДС</strong></label>
-            <input type="text" class="form-control" 
-            [(ngModel)]="client.vatCertificate"  name="vatCertificate">
-          </div>
-        </div>
-        <br>
-        <button type="submit" class="btn btn-success">Записать</button>
-    </div>
-  </form>
 
-</div>
+          <div class="form-group row">
+            <label 
+              for="inn"
+              class="col-md-3 col-form-label">
+              <strong>ИНН</strong>
+            </label>
+            <div class="col-md">
+              <input 
+                type="text" 
+                class="form-control" 
+                [(ngModel)]="client.inn" 
+                name="inn">
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label 
+              for="vatCertificate"
+              class="col-md-3 col-form-label">
+              <strong>№ свидетельства НДС</strong>
+            </label>
+            <div class="col-md">
+              <input 
+                type="text" 
+                class="form-control" 
+                [(ngModel)]="client.vatCertificate" 
+                name="vatCertificate">
+            </div>
+          </div>
+        
+        </div>
+      </div> 
+
+    </div>
+
+    <div class="col-md-2">
+      <button 
+        type="submit" 
+        class="btn btn-success btn-block">
+          <i class="fa fa-check-square-o">
+            </i> Записать
+      </button>
+      <a 
+        class="btn btn-danger btn-block"
+        [routerLink]="['../']">
+        <i class="fa fa-times-rectangle-o">
+          </i> Отмена
+      </a> 
+    </div>
+
+  </div>
+
+</form>
+
+
   
 
